--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,10 @@
 body{
     background-color: lightblue;
+    transform: rotate(30deg);
+    box{
+        background-color: #cccccc;
+        aw{
+            width:100px;
+        }
+    }
 }
